Use interp4j lib.