@@ -17,8 +17,24 @@ repositories {
 dependencies {
     implementation group: 'dev.khbd.lens4j', name: 'lens4j-core', version: lens4j_version
 
+    compileOnly group: 'dev.khbd.interp4j', name: 'interp4j-core', version: interp4j_version
+    annotationProcessor group: 'dev.khbd.interp4j', name: 'interp4j-processor', version: interp4j_version
+    testAnnotationProcessor group: 'dev.khbd.interp4j', name: 'interp4j-processor', version: interp4j_version
+
     testImplementation group: 'org.testng', name: 'testng', version: '6.13.1'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.9.0'
+}
+
+// configure interp4j plugin
+tasks.withType(JavaCompile) {
+    options.fork = true
+    options.compilerArgs.add('-Xplugin:interp4j interpolation.inlined=true prettyPrint.after.interpolation=true')
+    options.forkOptions.jvmArgs.addAll([
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+    ])
 }
 
 intellij {
